# ForgeDS

./: .gitignore  .mcp.json  CLAUDE.md  DESIGN-LANGUAGE.md  LICENSE  README.md  RESUME-IDE-SHELL-OVERHAUL.md  pyproject.toml  skills-lock.json
.claude/: settings.json
.github/workflows/: deploy-ide.yml  deploy-worker.yml
bridge/: __init__.py  __main__.py  claude_config.py  enrichment.py  handlers.py  requirements.txt  server.py  tree_builder.py
bridge/tests/: test_claude_config.py  test_environment.py
config/: deluge-manifest.yaml  forms.yaml  zia-script-prompts.yaml
config/seed-data/: form-fields.json  valid-actions.json  valid-statuses.json
docs/: TOOLCHAIN.md  hrc-knowledge-base-case-study.md  schema-layer-phases.md  zia-stress-test-plan.md
docs/superpowers/: ROLLBACK.md
docs/superpowers/plans/: 2026-04-10-ds-structural-validator.md  2026-04-21-hybrid-ide.md  2026-04-22-dashboard-wizard-brainstorming.md  2026-04-22-forgeds-widgets-phase1.md  2026-04-22-hybrid-ide-backend-gap-close.md  2026-04-22-ide-shell-overhaul.md  2026-04-23-forgeds-widgets-phase2a-contract.md  2026-04-23-forgeds-widgets-phase2b-contract.md  2026-04-23-forgeds-widgets-phase2c.md  2026-04-24-erm-brd.md  2026-04-24-forgeds-apply-playbook.md
docs/superpowers/rebuttals/: 2026-04-24-erm-brd-spec-rebuttal.md  2026-04-24-phase2d-decomposition-rebuttals.md
docs/superpowers/research/: 2026-04-25-forgeds-widgets-phase2d1-sidecar-architect-A.md  2026-04-25-forgeds-widgets-phase2d1-sidecar-architect-B.md
docs/superpowers/simulations/: 2026-04-23-forgeds-widgets-phase2c-sim.md  2026-04-24-erm-brd-sim.md  2026-04-24-forgeds-apply-playbook-sim.md
docs/superpowers/specs/: 2026-04-09-forgeds-ide-design.md  2026-04-10-ds-structural-validator-design.md  2026-04-21-hybrid-ide-design.md  2026-04-22-dashboard-wizard-brainstorming-design.md  2026-04-22-forgeds-widgets-phase1-design.md  (+13 more)
redesign/chargeback/: blueprint_transitions.dg  chargeback_status_change.dg  chargeback_validate.dg  config_forms_validate.dg  dispute_submission_validate.dg  scheduled_deadline_check.dg
redesign/expense_reimbursement/: blueprint_transitions.dg  clients_validate.dg  departments_validate.dg  on_validate_audit_fix.dg  sla_enforcement_null_fix.dg
src/forgeds/: __init__.py
templates/: anthropic.yaml.template  forgeds.yaml.example  gitignore.example  zoho-api.yaml.template
tests/: __init__.py  test_build_app.py  test_build_ds.py  test_build_widget_sdk_db.py  test_bundle_widget.py  test_config_deploy_block.py  test_config_widgets.py  test_config_widgets_entry_point.py  test_custom_apis_schema.py  test_deploy_widget.py  test_envelope.py  test_eslint_plugin_zoho_widget.py  test_gen_sdk_mock.py  test_harness_contract.py  test_lint_hybrid_wg_rules.py  test_lint_json_v1.py  test_lint_widgets.py  test_output_format.py  test_parse_ds_export_zero_field.py  test_publish_client.py  test_run_widget.py  test_scaffold_widget.py  test_shared_oauth.py  test_spec_loader.py  test_status_checks.py  test_status_cli.py  test_validate_manifest.py  test_zet_shim.py
tests/apps/: run_all.py
tests/fixtures/: lint_test_access_bad.sql  lint_test_bad.dg  lint_test_hybrid_bad.sql  validate_ds_bad.ds  validate_ds_good.ds
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts  vitest.config.ts
web/public/: 404.html
web/src/: App.tsx  index.css  main.tsx
web/vite-plugins/: mock-claude-proxy.ts
worker/: claude-api-proxy.js  github-auth-proxy.js  wrangler-claude.toml  wrangler.toml
(+313 files in other folders)
