[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forgeds"
version = "0.1.0"
description = "Zoho Creator rapid development engine — linting, scaffolding, .ds editing, and import pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Holger Gevers"}
]
keywords = ["zoho", "creator", "deluge", "linter", "development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
forgeds-lint = "forgeds.core.lint_deluge:main"
forgeds-lint-access = "forgeds.access.lint_access:main"
forgeds-lint-hybrid = "forgeds.hybrid.lint_hybrid:main"
forgeds-lint-widgets = "forgeds.widgets.lint_widgets:main"
forgeds-validate-widget-manifest = "forgeds.widgets.validate_manifest:main"
forgeds-build-widget-db = "forgeds.widgets.build_widget_sdk_db:main"
forgeds-status = "forgeds.status.cli:main"
forgeds-build-db = "forgeds.core.build_deluge_db:main"
forgeds-build-access-db = "forgeds.access.build_access_vba_db:main"
forgeds-scaffold = "forgeds.core.scaffold_deluge:main"
forgeds-parse-ds = "forgeds.core.parse_ds_export:main"
forgeds-ds-editor = "forgeds.core.ds_editor:main"
forgeds-build-ds = "forgeds.core.build_ds:main"
forgeds-validate-ds = "forgeds.core.validate_ds:main"
forgeds-validate = "forgeds.hybrid.validate_import:main"
forgeds-upload = "forgeds.hybrid.upload_to_creator:main"
forgeds-kb-init     = "forgeds.knowledge.cli:init_main"
forgeds-kb-scrape   = "forgeds.knowledge.cli:scrape_main"
forgeds-kb-parse    = "forgeds.knowledge.cli:parse_main"
forgeds-kb-build    = "forgeds.knowledge.cli:build_main"
forgeds-kb-validate = "forgeds.knowledge.cli:validate_main"
forgeds-kb-query    = "forgeds.knowledge.cli:query_main"
forgeds-kb-retrieve = "forgeds.knowledge.retriever:retrieve_main"
forgeds-kb-ingest   = "forgeds.knowledge.app_ingest:ingest_main"
forgeds-kb-project  = "forgeds.knowledge.app_projection:project_main"

[project.optional-dependencies]
knowledge = ["beautifulsoup4>=4.12", "markdownify>=0.13"]

[tool.setuptools.packages.find]
where = ["src"]
